Fix image serialization in gpuBenchmarking.printToSkPicture

PrintToSkPicture currently uses a custom image serializer, but there is no
corresponding custom deserializer in Skia -> we cannot deserialize these
images.

The historical reason for using a custom serializer is support for
--skip-reencoding-on-skp-capture.  This flag was added in
https://crrev.com/1710553002, but is no longer used.

The simplest fix for image serialization is to remove the custom proc
and allow Skia to handle it instead.

BUG=820142

Change-Id: Id19851811e23dd828b5fea7248874740cfda8dea
Reviewed-on: https://chromium-review.googlesource.com/956025
Reviewed-by: Antoine Labour <piman@chromium.org>
Reviewed-by: Leon Scroggins <scroggo@chromium.org>
Commit-Queue: Florin Malita <fmalita@chromium.org>
Cr-Commit-Position: refs/heads/master@{#541911}
Former-commit-id: 95f838f6df160e4acfc83de7aa2f8ee477fa24d0